test/invalid-semantics/57163_string_illegal_operation/string_illegal_operation.mag
-- Author: 57163, Guilherme Dias

fun main (_) : Unit -> Unit =
    var str : String = "val";
    str = "2" + 2 -- This ain't JavaScript
